[package]
name = "paper"
version = "0.1.0"
authors = ["Bryan Ndjeutcha <ndjeutcha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-commons = "0.28.5"
wayland-client = "0.28.5"
smithay-client-toolkit = "0.14.0"
snui = { git="https://gitlab.com/snakedye/snui.git" }
wayland-protocols = { version="0.28.5", features=["unstable_protocols", "client"] }
